@startuml

title __ANDROIDASSIGNMENTS's Class Diagram__\n

  namespace com.example.androidassignments {
    class com.example.androidassignments.ChatWindow {
        ~ chatmsg : ArrayList<String>
        - listViewThing : ListView
        - sendBtn : Button
        - txtBoxEdit : EditText
        + onBackPressed()
        # onCreate()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.ChatWindow.ChatAdapter {
        + ChatAdapter()
        + getCount()
        + getItem()
        + getView()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.LIstItemsActivity {
        {static} # ACTIVITY_NAME : String
        # REQUEST_IMAGE_CAPTURE : Integer
        - chbox : CheckBox
        - imbtn : ImageButton
        - swtch : Switch
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
        # print()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.LoginActivity {
        {static} # ACTIVITY_NAME : String
        {static} ~ KEY_PASS : String
        {static} ~ KEY_USER : String
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.MainActivity {
        {static} # ACTIVITY_NAME : String
        # rc : Integer
        {static} ~ helloWorldStr : String
        {static} ~ toastexample : String
        - btn : Button
        - btn2 : Button
        {static} - helloWorld : TextView
        # onActivityResult()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  com.example.androidassignments.ChatWindow -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.ChatWindow +-down- com.example.androidassignments.ChatWindow.ChatAdapter
  com.example.androidassignments.ChatWindow.ChatAdapter -up-|> android.widget.ArrayAdapter
  com.example.androidassignments.LIstItemsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
